--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>mainpackage.Main</mainClass>
+                    <mainClass>Game.Main</mainClass>
                 </configuration>
             </plugin>
             <plugin>
