--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>javafx-graphics</artifactId>
             <version>17-ea+11</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
