--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>Game.Main</mainClass>
+                    <mainClass>de.sudoku.game.Main</mainClass>
                 </configuration>
             </plugin>
             <plugin>
